# wesense-ingester-core

./: pyproject.toml
.github/workflows/: test.yml
tests/: test_clickhouse_writer.py  test_dedup.py  test_disk_cache.py  test_gateway_client.py  test_geocoder.py  test_iso3166.py  test_keys.py  test_pipeline.py  test_publisher.py  test_reading_id.py  test_signer.py  test_trust.py  test_zenoh_config.py  test_zenoh_publisher.py  test_zenoh_queryable.py  test_zenoh_subscriber.py
tests/integration/: test_zenoh_roundtrip.py
wesense_ingester/: __init__.py  pipeline.py  reading_types.py  runtime.py
wesense_ingester/cache/: dedup.py  disk_cache.py
wesense_ingester/clickhouse/: writer.py
wesense_ingester/gateway/: __init__.py  client.py  config.py
wesense_ingester/geocoding/: geocoder.py  iso3166.py
wesense_ingester/ids/: reading_id.py
wesense_ingester/logging/: setup.py
wesense_ingester/mqtt/: publisher.py
wesense_ingester/proto/: signed_reading.proto  signed_reading_pb2.py
wesense_ingester/registry/: __init__.py  client.py  config.py
wesense_ingester/signing/: __init__.py  keys.py  signer.py  trust.py
wesense_ingester/zenoh/: __init__.py  config.py  publisher.py  queryable.py  subscriber.py
wesense_ingester_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
