[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wesense-ingester-core"
version = "0.1.0"
description = "Shared core library for WeSense sensor data ingesters"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.0",
    "paho-mqtt>=2.0.0",
    "reverse_geocoder==1.5.1",
]

[project.optional-dependencies]
p2p = [
    "cryptography>=42.0.0",
    "protobuf>=5.26.0",
    "eclipse-zenoh>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "cryptography>=42.0.0",
    "protobuf>=5.26.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires Docker and full p2p deps (deselected by default)",
]
addopts = "-m 'not integration'"

[tool.setuptools.packages.find]
include = ["wesense_ingester*"]
